<resources>
    <string name="app_name">Zc World </string>
    <string name="name">昵称：</string>
    <string name="loginName">用户名：</string>
    <string name="loginPass">密码：</string>
    <string name="login">登录</string>
    <string name="logon">注册</string>
    <string name="title_activity_bookkeeping_book">BookkeepingBookActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">home</string>
    <string name="welcome">Welcome to the notes of ewoo!</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="To_be_developed">该功能暂未开发</string>
    <string name="To_be_developed1">该添加、删除、查询、编辑功能暂未开发</string>
    <string name="To_be_developed2">该统计功能暂未开发</string>
    <string name="bookkeepingBook">记账本</string>
    <string name="addBookkeepingBook">新建记账</string>
    <string name="title">Title：</string>
    <string name="checkBookkeepingBook">查看记账本</string>
    <string name="showData">数据显示区域</string>
    <string name="accountTitle">标题：</string>
    <string name="accountUser">记账人：</string>
    <string name="createDate">记账日期：</string>
    <string name="modifyDate">修账日期：</string>
    <string name="bookkeepingBook_money">money：$</string>
    <string name="accounrNote">记账：</string>
    <string name="submit">提交</string>
    <string name="element">元</string>
    <string name="cancel">清空</string>
    <string name="accountCreate">记账日期：</string>
    <string name="qxzrq">请选择日期</string>
    <string name="isIncome">是否收入：</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
