<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bookkeeping_background"
    >

    <TextView
        android:id="@+id/bookkeepingBookID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/isIncome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="@dimen/appbar_padding_top"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/appbar_padding_top"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountTitle"
            />

        <TextView
            android:id="@+id/accountID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountUser"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/bookkeepingBookCreateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/modifyDate" />

            <TextView
                android:id="@+id/bookkeepingBookModifyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/modifyDate" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/bookkeepingBook_duoxuan"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

    </RelativeLayout>

</LinearLayout>